<resources>
<string name="app_name">TrOASIS</string>
	<string name="caption_btn_yes">네</string>
	<string name="caption_btn_no">아니오</string>
	<string name="caption_btn_back">돌아가기</string>
	<string name="caption_btn_exit">종료</string>
	<string name="caption_btn_accept">수락</string>
	<string name="caption_btn_ok">확인</string>
	<string name="caption_btn_cancel">취소</string>
	<string name="caption_btn_menu">메뉴</string>
	<string name="caption_btn_refresh">새로고침</string>
	<string name="caption_btn_top">맨위로</string>
	<string name="caption_btn_mode">모드변환</string>
	<string name="caption_btn_filter">필터링</string>
	<string name="caption_btn_new">글쓰기</string>
	<string name="caption_btn_home">메인화면</string>
	<string name="caption_btn_setup">설정</string>
	<string name="caption_btn_send">보내기</string>
	<string name="caption_btn_voice">음성</string>
	<string name="caption_btn_picture">사진</string>
	<string name="caption_btn_motion">동영상</string>
	<string name="caption_btn_reply">답장</string>
	<string name="caption_btn_direct">직접보내기</string>
	<string name="map_view_name">지도보기</string>
	<string name="sns_list_name">메시지 보기</string>
	<string name="weather_name">날씨정보</string>
	<string name="cctv_name">CCTV 보기</string>
	<string name="my_msg_name">내 메시지 보기</string>
	<string name="favorite_name">Favorite 보기</string>
	<string name="rest_area_name">휴게소 정보</string>
	<string name="poi_name">주변 맛집 정보</string>
	<string name="setup_name">설정</string>
	<string name="option_name">옵션</string>
	<string name="option_attach_view">첨부파일 보기</string>
	<string name="option_attach_del">첨부파일 삭제</string>
	<string name="destination_name">목적지 설정</string>
	<string name="sns_new_name">신규 메시지 작성</string>
	<string name="sns_reply_name">응답 메시지 작성</string>
	<string name="sns_view_name">메시지 상세보기</string>
	<string name="quick_msg_name">Quick 메시지 작성</string>
	<string name="caption_msg_filter">메시지 종류 선택</string>
	<string name="media_voice_name">음성 녹음</string>
	<string name="media_image_name">카메라 사진찍기</string>
	<string name="media_video_name">동영상 녹화</string>
	<string name="poi_view_name">맛집정보 상세보기</string>
	<string name="cctv_view_name">CCTV 보기</string>
	<string name="msg_user_confirm">TrOASIS에서 여러분의 현재 위치정보를 사용하고자 합니다.\n\n수락 하십니까?</string>
	<string name="msg_user_confirm2">운전중 자료를 입력하거나 TrOASIS를 조정하지 마십시오. 운전에 집중하지 않으면 사망, 중상, 또는 재산상의 손실이 발생할 수도 있습니다. TrOASIS를 사용하는 동안 모든 책임을 지겠습니까?</string>
	<string name="msg_user_confirm3">TrOASIS에서 현재 위치 정보를 사용하고자 합니다.\n\n운전 중 조작은 교통사고의 원인이 될 수 있으니, 안전을 위해 운전 중 조작을 삼가해 주시기 바랍니다.</string>
	<string name="msg_exit_program">프로그램을 종료하시겠습니까?</string>
	<string name="msg_under_construction">2010년 12월말에 서비스 예정입니다.</string>
	<string name="msg_comm_fail">서버와의 통신을 연결할 수 없습니다.</string>
	<string name="msg_comm_fail_msg">통신 오류가 발생해서, 서버에 메시지를 전송하지 못했습니다.</string>
	<string name="msg_gps_fail_msg">GPS 현재위치를 찾을 수 없어서, 서버에 정보를 전송하지 못했습니다.</string>
	<string name="msg_cctv_sample">현재는 실제 영상이 아닌 샘플 영상이 제공됩니다.\n샘플 CCTV 영상을 보시겠습니까? </string>
	<string name="caption_msg_all">전체 메시지</string>
	<string name="caption_msg_traffic">교통정보 메시지</string>
	<string name="caption_msg_user">사용자 메시지</string>
	<string name="caption_car_flow"><b><u>소통정보</u></b> 알림</string>
	<string name="caption_delay_start"><b><u>지정체</u></b> 알림</string>
	<string name="caption_delay_end"><b><u>지정체 종료</u></b> 알림</string>
	<string name="caption_accident_found"><b><u>사고</u></b>발생 알림</string>
	<string name="caption_accident_closed"><b><u>사고처리</u></b> 완료 알림</string>
	<string name="caption_construction_found"><b><u>공사</u></b> 알림</string>
	<string name="caption_brocken_car_found"><b><u>고장</u></b>차량 알림</string>
	<string name="caption_new_msg">상세 메시지 작성</string>
	<string name="caption_nickname">닉네임:</string>
	<string name="caption_icon">아이콘:</string>
	<string name="caption_twitter">Twitter 계정:</string>
	<string name="caption_email">e-mail 주소:</string>
	<string name="caption_phone">전화번호:</string>
	<string name="caption_trip_purpose">여행목적:</string>
	<string name="caption_destination">여행목적지:</string>
	<string name="caption_style">운전스타일:</string>
	<string name="caption_level">운전레벨:</string>
	<string name="msg_missing_destination">여행 목적지를 입력하세요.</string>
	<string name="msg_missing_purpose">여행 목적을 입력하세요.</string>
	<string name="msg_missing_distance">길벗의 탐색범위를 입력해 주세요.</string>
	<string name="msg_missing_user_id">전화번호를 입력해 주세요.</string>
	<string name="msg_missing_user_id2">전화번호, e-mail 주소, Twitter 계정중에 1가지는 입력해 주세요.</string>
	<string name="msg_missing_msg_contents">메시지 내용을 입력하세요.</string>
	<string name="msg_missing_nickname">닉네임을 입력하세요.</string>
	<string name="msg_restriction">설 연휴 사용자 폭주에 대비해, 설 연휴기간동안 임시로 기능을 제한하고 있습니다.</string>
</resources>