<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout01" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">


<!--상단 영역			-->
<FrameLayout android:id="@+id/FrameLayout02" android:background="@drawable/main_bkgnd" android:layout_height="fill_parent" android:layout_width="fill_parent">

<LinearLayout android:id="@+id/LinearLayout02" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

	<!--상단 타이틀 바		-->
	<FrameLayout android:id="@+id/FrameLayout03" android:layout_width="fill_parent" android:layout_height="@dimen/title_bar_height" android:background="@drawable/main_title">
	
		<!--하단 공용 메뉴 바: 메뉴버튼 목록	-->
		<RelativeLayout android:id="@+id/RelativeLayout02" android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical">	
				
			<LinearLayout android:id="@+id/LinearLayout02" android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerVertical="true" android:layout_marginLeft="5dip">
				<ImageButton android:layout_width="34dip" android:layout_height="27dip" android:id="@+id/id_btn_back" android:background="@drawable/btn_back_xml" android:layout_gravity="center_vertical"></ImageButton>
			</LinearLayout>

			<LinearLayout android:id="@+id/LinearLayout04" android:layout_centerInParent="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerVertical="true">
				<!--TextView android:id="@+id/id_txt_title" android:layout_height="wrap_content" android:text="@string/setup_name" android:layout_gravity="center_vertical|center_horizontal" android:textSize="20dip" android:layout_width="wrap_content" android:textColor="@color/color_title"></TextView-->
			</LinearLayout>

			<LinearLayout android:id="@+id/LinearLayout03" android:layout_alignParentRight="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerVertical="true" android:layout_marginRight="5dip">
			</LinearLayout>
		
		</RelativeLayout>
	
	</FrameLayout>
	
	<!--작업영역			-->
	<ScrollView android:id="@+id/ScrollView0401" 
			android:layout_width="fill_parent" android:scrollbars="vertical" android:visibility="visible" android:layout_height="466dip">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	
		<LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">

			<TextView android:id="@+id/TextView02" android:layout_width="fill_parent" android:layout_height="7dip"></TextView>

			<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:text="@string/caption_nickname" android:layout_width="93dip" android:textColor="@color/color_label"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/id_edit_nickname" android:layout_width="fill_parent" android:imeActionId="3" android:hint="(예) 홍길동"></EditText>
			</LinearLayout>
			
			<LinearLayout android:id="@+id/LinearLayout04" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_width="93dip" android:text="@string/caption_icon" android:textColor="@color/color_label"></TextView>
				<Spinner android:layout_height="wrap_content" android:id="@+id/id_spin_icon" android:drawSelectorOnTop="true" android:paddingTop="10dip" android:paddingBottom="10dip" android:layout_width="fill_parent"></Spinner>
			</LinearLayout>

<!--
			<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:text="@string/caption_phone" android:layout_width="93dip" android:textColor="@color/color_label"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/id_edit_phone" android:layout_width="fill_parent" android:imeActionId="3" android:hint="(예) 01012345678"></EditText>
			</LinearLayout>
-->
			
			<!--
			<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:text="@string/caption_email" android:layout_width="93dip" android:textColor="@color/color_label"></TextView>
				<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/id_edit_email" android:imeActionId="32" android:hint="(예) gdhong@dhmg.com"></EditText>
			</LinearLayout>

			<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:text="@string/caption_twitter" android:layout_width="93dip" android:textColor="@color/color_label"></TextView>
				<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/id_edit_twitter" android:imeActionId="32" android:hint="(예) honggildong"></EditText>
			</LinearLayout>
			-->
			
			<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView03" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_width="93dip" android:text="@string/caption_destination" android:textColor="@color/color_label"></TextView>
				<Spinner android:layout_height="wrap_content" android:id="@+id/id_spin_destination" android:drawSelectorOnTop="true" android:paddingTop="10dip" android:paddingBottom="10dip" android:layout_width="fill_parent"></Spinner>
			</LinearLayout>
			
			<LinearLayout android:id="@+id/LinearLayout04" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView04" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_width="93dip" android:text="@string/caption_trip_purpose" android:textColor="@color/color_label"></TextView>
				<Spinner android:layout_height="wrap_content" android:id="@+id/id_spin_trip_purpose" android:drawSelectorOnTop="true" android:paddingTop="10dip" android:paddingBottom="10dip" android:layout_width="fill_parent"></Spinner>
			</LinearLayout>
			
			<LinearLayout android:id="@+id/LinearLayout05" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView05" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_width="93dip" android:text="@string/caption_style" android:textColor="@color/color_label"></TextView>
				<Spinner android:layout_height="wrap_content" android:id="@+id/id_spin_style" android:drawSelectorOnTop="true" android:paddingTop="10dip" android:paddingBottom="10dip" android:layout_width="fill_parent"></Spinner>
			</LinearLayout>
			
			<LinearLayout android:id="@+id/LinearLayout06" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
				<TextView android:id="@+id/TextView06" android:layout_height="wrap_content" android:layout_marginLeft="3dip" android:layout_width="93dip" android:text="@string/caption_level" android:textColor="@color/color_label"></TextView>
				<Spinner android:layout_height="wrap_content" android:id="@+id/id_spin_level" android:drawSelectorOnTop="true" android:paddingTop="10dip" android:paddingBottom="10dip" android:layout_width="fill_parent"></Spinner>
			</LinearLayout>
	
		</LinearLayout>
		
	<TextView android:id="@+id/TextView02" android:layout_width="fill_parent" android:layout_height="400dip"></TextView>
</LinearLayout>

	</ScrollView>

</LinearLayout>

</FrameLayout>
<!--(끝)상단 영역		-->


 

<!--하단 공용 메뉴 바		-->
<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_alignParentBottom="true"
			android:layout_height="wrap_content" android:layout_width="fill_parent">

	<!--하단 공용 메뉴 바: 메뉴바 배경	-->
	<FrameLayout android:id="@+id/FrameLayout01" android:layout_width="fill_parent" android:layout_height="@dimen/footer_bar_height" android:background="@drawable/footer_bkgnd">
	
		<!--하단 공용 메뉴 바: 메뉴버튼 목록	-->
		<RelativeLayout android:id="@+id/RelativeLayout02" android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_vertical">	
				
			<LinearLayout android:id="@+id/LinearLayout02" android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerVertical="true">
			</LinearLayout>
			
			<LinearLayout android:id="@+id/LinearLayout03" android:layout_alignParentRight="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_centerVertical="true" android:layout_marginRight="5dip">
				<ImageButton android:layout_width="52dip" android:layout_height="30dip" android:id="@+id/id_btn_setup" android:background="@drawable/btn_setup_xml" android:layout_gravity="center_vertical"></ImageButton>
			</LinearLayout>
		
		</RelativeLayout>
	
	</FrameLayout>

</LinearLayout>
<!--(끝)하단 공용 메뉴 바	-->


</RelativeLayout>
	